0.001  2006-06-26

- initial CPAN release